# django-project-proto

./: .coveragerc  .gitignore  Pipfile  README.rst  pyproject.toml  setup.py
proto/proto/: apiv1.py  celery.py  envsettings.py  settings.py  urls.py
